Fix first column filters + description overflow

--- a/app/styles/columns.less
+++ b/app/styles/columns.less
@@ -184,10 +184,11 @@
 }
 
 .hypertable__column--text .hypertable__cell {
-  .editing-input {
+  .editing-input, .text-value {
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
+    overflow: hidden;
   }
 
   .tooltip-inner {
